# pyqt-widget-library

./: README.md  demo.py  pyproject.toml
pyqt_widget_library/: __init__.py  base_display.py  interactive_display.py  main_window.py  simple_display.py
pyqt_widget_library/events/: mouse_click_event.py
pyqt_widget_library/utils/: polygon_item_node.py
